# snapper

./: CMakeLists.txt  helloworld.proto  snapper.cpp  snapper.proto
client/cpp/: CMakeLists.txt  client.cpp
client/java/: build.gradle
client/java/app/: build.gradle
client/java/app/src/main/: AndroidManifest.xml
client/java/app/src/main/java/com/example/roman/snapper/: SnapperActivity.java
client/java/app/src/main/proto/: snapper.proto
client/java/app/src/main/res/layout/: activity_snapper.xml
client/java/gradle/wrapper/: gradle-wrapper.properties
common/: snapper.proto
server/: CMakeLists.txt  snapper.cpp  snapper.proto
